# FastCertRelPose

./: .gitmodules  CMakeLists.txt  README.md
cmake/: EssentialConfig.cmake.in  EssentialConfigVersion.cmake.in  FindOpengv.cmake  FindOptimization.cmake  Findgncso.cmake  setup_installation.cmake
example_install/: CMakeLists.txt  README.md  example_GNC_TNT_essential_matrix.cpp
examples/: CMakeLists.txt  example_GNC_TNT_essential_matrix.cpp  example_GNC_essential_matrix.cpp  example_essential_matrix.cpp  experiment_time.cpp  experiment_time_init.cpp
include/: CorrespondencesVectors.h  Essential.h  EssentialManifold.h  EssentialProblem.h  EssentialTypes.h  EssentialUtils.h  EssentialVerification.h  GNCEssential.h  generateCorrespondences.h
matlab/: CMakeLists.txt  EssentialMatrixEstimate.m  EssentialMatrixEstimationTest.m  EssentialMatrixMex.cc  EssentialMatrixMexUtils.h  GNCEssentialMatrixEstimate.m  GNCEssentialMatrixMex.cc  RobustEssentialMatrixEstimationTest.m  setup.m
python/: CMakeLists.txt
python/relativeposepython/: __init__.py  central_relative_pose_example.py  relativeposepython.cc  setup.py.in
python/robustrelativeposepython/: __init__.py  robust_central_relative_pose_example.py  robustrelativeposepython.cc  setup.py.in
src/: Essential.cpp  EssentialManifold.cpp  EssentialProblem.cpp  EssentialUtils.cpp  EssentialVerification.cpp  GNCEssential.cpp  generateCorrespondences.cpp
